<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Sugar Daddy</string>
    <string name="top_sheet_behavior" translatable="false">com.sugardaddy.citascasualesconocergentenuevacercadeti.modules.topsheet.TopSheetBehavior</string>
    <string name="center_sheet_behavior" translatable="false">com.sugardaddy.citascasualesconocergentenuevacercadeti.modules.centersheet.CenterSheetBehavior</string>
    <string name="dsv_ex_msg_dont_set_lm" translatable="false">You should not set LayoutManager on DiscreteScrollView.class instance. Library uses a special one. Just don\'t call the method.</string>
    <string name="dsv_ex_msg_adapter_wrong_recycler" translatable="false">InfiniteScrollAdapter is supposed to work only with DiscreteScrollView</string>
    <string name="facebook_app_id" translatable="false">1827527620728966</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1827527620728966</string>
    <string name="google_api_key_geo" translatable="false">AIzaSyDsFVND2moRfGtG5e-TsOy6JiOY2Xv6qwg</string>
    <string name="gcm_sender_id" translatable="false">212061917392</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1856022005494530~8980189323</string>
    <string name="not_internet_connection">No internet connection!</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_no_inte">No internet. Connect and try again</string>
    <string name="wait_int">Internet connection is not available</string>
    <string name="wait_wait">Wait for internet connection</string>
    <string name="offline_mode">No internet connection</string>
    <string name="wait_refresh">Refresh</string>
    <string name="error_network_connection_lost">Connection lost</string>
    <string name="error_connection_non_modal_no_internet_description">"You're using Sugar Daddy in offline mode"</string>
    <string name="error_connection_non_modal_no_internet_subtitle">Enable Bluetooth to keep using Sugar Daddy offline</string>
    <string name="permission_alert">Permissions Alert</string>
    <string name="permission_alert_msg">You cannot use the application if you didn\'t allow read contacts permission .Thanks</string>
    <string name="msg_permission_required">You denied the required permission, You Disabled the function. Grant the permission to use this function !</string>
    <string name="permissin_in_location">Failed to update a location, for no permission</string>
    <string name="password_reset_text">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_remember">Back to login</string>
    <string name="login_email">Email or Username</string>
    <string name="forgot_reset">Reset Password</string>
    <string name="forgot_dont">Don\'t worry, just enter the email you used to register your account</string>
    <string name="forgot_lost">Password Lost ?</string>
    <string name="login">Login</string>
    <string name="login_desc">Welcome, Please login</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password_recovery">PASSWORD RECOVERY</string>
    <string name="forgot_pass">Forgot Password ?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_logo">Logo</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_and_you_will_have_traveler_experience">Login and you will have traveler experience</string>
    <string name="create_an_account">Create an account to begin your journey</string>
    <string name="gender">Gender</string>
    <string name="female">Woman</string>
    <string name="male">Man</string>
    <string name="gender_missing">Missing Gender!</string>
    <string name="email_username">Please enter your Email or Username</string>
    <string name="login_verify">Email not found</string>
    <string name="login_verify_username">Invalid username</string>
    <string name="login_verify_username_password">Invalid username or password</string>
    <string name="login_email_fail_internet">Login failed, check your internet</string>
    <string name="login_email_fail">Login failed, try later</string>
    <string name="login_verify_password">Wrong password</string>
    <string name="use_email">Just tell us what is your email</string>
    <string name="login_email_forgot">Email</string>
    <string name="login_no_int">No internet connection. Please Connect</string>
    <string name="invalid_email">Enter valid email</string>
    <string name="login_ok">OK</string>
    <string name="login_press_again">Press back again to exit</string>
    <string name="splash_loading">Loading…</string>
    <string name="welcome_to_dateyou">Welcome to Sugar Daddy</string>
    <string name="login_with_phone">Login with phone number</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="auth">Authenticating…</string>
    <string name="signin_alert_cancel">Cancel</string>
    <string name="signin_alert_create_new_account">Create new account</string>
    <string name="signin_alert_nofacebook">Sorry, this Facebook account does not have a matching Sugar Daddy account.</string>
    <string name="signin_alert_retry">Retry</string>
    <string name="signin_alert_title">Sign in</string>
    <string name="signin_alert_use_badoo_account">Use Dadoo account</string>
    <string name="signin_alert_use_facebook_account">Use Facebook</string>
    <string name="signin_cancel">Cancel</string>
    <string name="signin_existing_account">User</string>
    <string name="signin_existing_blocked">Your account has been blocked. Check your email for details_</string>
    <string name="signin_existing_email">Email</string>
    <string name="signin_existing_emailormobile">Email or cell phone number</string>
    <string name="signin_existing_emailorphone">Email, username or cell phone</string>
    <string name="signin_existing_enter_password">Enter your password</string>
    <string name="signin_existing_enter_valid_address">Enter your email address or cell phone number</string>
    <string name="signin_existing_forgot_password">Forgot password?</string>
    <string name="signin_existing_getnewpassword">Create new password</string>
    <string name="signin_existing_mobile">Phone number</string>
    <string name="signin_existing_password">Password</string>
    <string name="signin_existing_register_byemail">Create Sugar Daddy account</string>
    <string name="signin_existing_required">Required</string>
    <string name="signin_existing_signin">Sign in</string>
    <string name="signin_existing_signin_byemail">Sign in by email</string>
    <string name="signin_existing_title">Sign in</string>
    <string name="signin_existing_title_welcome">Welcome back</string>
    <string name="signin_forgot_password_account">User</string>
    <string name="signin_forgot_password_alert_message">Instructions for creating a new password have been sent.</string>
    <string name="signin_forgot_password_alert_title">Done!</string>
    <string name="signin_forgot_password_alert_both_message">"An text message with a Sugar Daddy link and new password has been sent to your cell phone_ We've also sent you an email that shows you how you can change this password on your PC."</string>
    <string name="signin_forgot_password_alert_both_title">Reminder sent</string>
    <string name="signin_forgot_password_alert_wap_message">Your password has been reset_ An email with your new password has been sent to you_</string>
    <string name="signin_forgot_password_alertsms_message">We have sent you a text message with a new password and link to Sugar Daddy.</string>
    <string name="signin_forgot_password_alertsms_title">Text message sent</string>
    <string name="signin_forgot_password_enter_your_address">Email or cell phone</string>
    <string name="signin_forgot_password_error_email_required">Enter your email address or cell phone number</string>
    <string name="signin_forgot_password_loading">Loading…</string>
    <string name="signin_forgot_password_ok">OK</string>
    <string name="signin_forgot_password_overview_html_format">"&lt;head>%1$s&lt;/head>&lt;body>&lt;P Align=Center>Enter the same info you used to set up your account. We'll send details how to create a new password.&lt;/P>&lt;/body>"</string>
    <string name="signin_forgot_password_overview_html_format_android">"&lt;html>&lt;center>Enter the same info you used to set up your account. We'll send details how to create a new password.&lt;/center>&lt;/html>"</string>
    <string name="signin_forgot_password_signin">Sign in</string>
    <string name="signin_forgot_password_title">Forgot Password</string>
    <string name="signin_new_activated">Activated!</string>
    <string name="signin_new_back">Back</string>
    <string name="signin_new_birthday">Birthday</string>
    <string name="signin_new_dd_mm_yyyy">MM/DD/YYYY</string>
    <string name="signin_new_email">Email</string>
    <string name="signin_new_email_alert_cancel">Cancel</string>
    <string name="signin_new_email_alert_message">Email address %1$s already in system. Try to sign in instead</string>
    <string name="signin_new_email_alert_signin">Sign in</string>
    <string name="signin_new_email_alert_title">Email already in system</string>
    <string name="signin_new_enter_birthday">Set your date of birth</string>
    <string name="signin_new_enter_city">Enter city name</string>
    <string name="registration_gender_female">Woman</string>
    <string name="registration_gender_header">Hey! You’re…</string>
    <string name="registration_gender_male">Man</string>
    <string name="photo_of_yourself">Nobody can see your ptofile until you add a photo of yourself</string>
    <string name="say_cheese">Say cheese</string>
    <string name="add_photos">Add Photos</string>
    <string name="peoplenearby_explanation_button">Get Started</string>
    <string name="peoplenearby_explanation_subtitle">Use Sugar Daddy to find and chat to other people near you</string>
    <string name="peoplenearby_explanation_title">Welcome to People nearby!</string>
    <string name="profile_password_header_msg">Make sure your email address is correct so we can send you your password. You will then be able to sign out. If you don\'t see our email, please check your spam folder.</string>
    <string name="profile_settings_password">Get Password</string>
    <string name="settings_delete_account">Delete account</string>
    <string name="noti_messages">Messages</string>
    <string name="noti_messages_text">Get updates about new messages</string>
    <string name="noti_matches">Matches</string>
    <string name="noti_matches_text">Get updates about new matches</string>
    <string name="noti_liked_you">Liked you</string>
    <string name="noti_liked_you_text">Get updates about people who like you</string>
    <string name="noti_profile_visitor">Profile visitors</string>
    <string name="noti_profile_visitor_text">Get updates about people who visit your profile</string>
    <string name="noti_favorited_you">Favorited you</string>
    <string name="noti_favorited_you_text">Get updates about people who favorited you</string>
    <string name="noti_datoo_live">Sugar Daddy Live</string>
    <string name="noti_datoo_live_text">Get updates when your favorite streamers are live</string>
    <string name="live_report_dont_like">I don\'t like it</string>
    <string name="live_report_fraud">Fraud or scam</string>
    <string name="live_report_sale">Sale or solicitation</string>
    <string name="live_report_rud">Rudeness or abuse</string>
    <string name="live_report_hate">Hate speech</string>
    <string name="live_report_nud">Nudity or pornography</string>
    <string name="live_report_violence">Violence or threats</string>
    <string name="live_report_injury">Self-harm or injury</string>
</resources>