<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/live_report_dont_like"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_bordered"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/live_report_dont_like"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/live_report_fraud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_bordered"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/live_report_fraud"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/live_report_sale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_bordered"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/live_report_sale"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/live_report_rud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_bordered"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/live_report_rud"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/live_report_hate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_bordered"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/live_report_hate"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/live_report_nud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_bordered"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/live_report_nud"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/live_report_violence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_bordered"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/live_report_violence"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/live_report_injury"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_bordered"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp"
        android:text="@string/live_report_injury"
        android:textSize="17sp"
        android:textColor="@color/black"/>

</LinearLayout>
